--- a/src/App.scss
+++ b/src/App.scss
@@ -158,6 +158,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   background: #f5f5f7;
+  color: #28292d;
 
   display: flex;
   flex-direction: column;
@@ -172,12 +173,23 @@ body {
 
 .container {
   box-sizing: border-box;
-  margin: 0px auto;
   padding: 0 2vw;
+}
+
+@media (max-width: 769px) {
+  .container {
+    padding: 0 4.6vw;
+  }
 }
 
 .header__left_logo {
   width: 12vw;
+}
+
+@media (max-width: 769px) {
+  .header__left_logo {
+    width: 45vw;
+  }
 }
 
 .homeMain {
@@ -194,6 +206,13 @@ body {
   justify-content: space-between;
   padding-top: 0.86vw;
   padding-bottom: 0.24vw;
+}
+
+@media (max-width: 769px) {
+  .header_container {
+    padding-top: 2.2vw;
+    padding-bottom: 4.26vw;
+  }
 }
 
 .header_left {
@@ -221,6 +240,12 @@ body {
   width: 1.25vw;
 }
 
+@media (max-width: 769px) {
+  .header__right_busket {
+    width: 6.4vw;
+  }
+}
+
 .header__right_phone {
   font-family: Proxima Nova;
   font-size: 1vw;
@@ -246,6 +271,12 @@ body {
   gap: 0.2vw;
 }
 
+@media (max-width: 769px) {
+  .header__right_busket_container {
+    gap: 2.1vw;
+  }
+}
+
 .header__right_busket_num {
   width: 1.8vw;
   height: 1.25vw;
@@ -257,6 +288,17 @@ body {
   font-family: Proxima Nova;
   font-size: 0.8vw;
   font-weight: 600;
+  color: #292a2e;
+}
+
+@media (max-width: 769px) {
+  .header__right_busket_num {
+    font-size: 3.2vw;
+    border: 0.26vw solid #60626c;
+    border-radius: 5.2vw;
+    width: 9.6vw;
+    height: 6.4vw;
+  }
 }
 
 .header__right_phone {
@@ -281,6 +323,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  font-family: Inter;
+  font-size: 0.72vw;
+  font-weight: 600;
+  letter-spacing: -0.02em;
 }
 
 .catalogPnav_left {
@@ -310,11 +357,28 @@ body {
   gap: 1.7vw;
 }
 
-.catalogPnav {
-  font-family: Inter;
-  font-size: 0.72vw;
+.catalogPnav2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media (min-width: 770px) {
+  .catalogPnav2 {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+.catalogPnav__let_burger {
+  width: 10.6vw;
+}
+
+.catalogPnav__right_numTel {
+  font-family: Proxima Nova;
+  font-size: 3.73vw;
   font-weight: 600;
-  letter-spacing: -0.02em;
 }
 
 .catalogPnav__right_navEl {
@@ -353,12 +417,33 @@ body {
   border-bottom: 0.05vw solid #60626c99;
 }
 
+@media (max-width: 769px) {
+  .mainText {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    height: 93vw;
+    padding: 10vw 0 21.3vw 0;
+    gap: 8.52vw;
+    text-align: left;
+    justify-content: start;
+  }
+}
+
 .mainText_left {
   font-family: Proxima Nova;
   font-size: 3.75vw;
   font-weight: 600;
   max-width: 40vw;
   color: #292a2e;
+}
+
+@media (max-width: 769px) {
+  .mainText_left {
+    font-size: 9vw;
+    max-width: 100vw;
+  }
 }
 
 .mainText_right {
@@ -373,10 +458,28 @@ body {
   font-weight: 400;
 }
 
+@media (max-width: 769px) {
+  .mainText_right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 0;
+    font-size: 3.73vw;
+    gap: 4.26vw;
+  }
+}
+
 .priceOnSystemContent__top_left_pricesData {
   display: flex;
   gap: 0.42vw;
   align-items: center;
+}
+
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_pricesData {
+    gap: 2.1vw;
+    margin-bottom: 4.26vw;
+  }
 }
 
 .priceOnSystemContent__top_left_pricesData_txt {
@@ -385,12 +488,22 @@ body {
   font-weight: 600;
   color: #292a2e;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_pricesData_txt {
+    font-size: 2.6vw;
+  }
+}
 
 .priceOnSystemContent__top_left_pricesData_data {
   color: #787b87;
   font-family: Inter;
   font-size: 0.72vw;
   font-weight: 600;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_pricesData_data {
+    font-size: 2.6vw;
+  }
 }
 
 .priceOnSystemContent__top_left_h1 {
@@ -399,6 +512,11 @@ body {
   font-weight: 600;
   color: #f35816;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_h1 {
+    font-size: 7.5vw;
+  }
+}
 
 .priceOnSystemContent__top_left_h2 {
   font-family: Inter;
@@ -406,9 +524,19 @@ body {
   font-weight: 400;
   color: #292a2e;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_h2 {
+    font-size: 3.73vw;
+  }
+}
 
 .priceOnSystemContent__top_left {
   max-width: 50vw;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left {
+    max-width: 100vw;
+  }
 }
 
 .priceOnSystemContent__top_left_h2 {
@@ -416,9 +544,21 @@ body {
   margin-top: 1.66vw;
   margin-bottom: 2vw;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_h2 {
+    max-width: 85%;
+    margin-top: 4.2vw;
+    margin-bottom: 4.2vw;
+  }
+}
 
 .priceOnSystemContent__top_left_pricesData_calendar {
   width: 1.35vw;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_left_pricesData_calendar {
+    width: 6.4vw;
+  }
 }
 
 .priceOnSystemContent__top_right {
@@ -430,6 +570,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_right {
+    width: 100%;
+    height: 26.6vw;
+    border-radius: 2.1vw;
+    padding: 4.26vw;
+  }
 }
 
 .priceOnSystemContent__top_right_exelBtn {
@@ -445,12 +593,25 @@ body {
   width: 5vw;
   height: 1.25vw;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_right_exelBtn {
+    font-size: 2.6vw;
+    border-radius: 1.6vw;
+    width: 26.5vw;
+    height: 6.4vw;
+  }
+}
 
 .priceOnSystemContent__top_right_txt {
   color: #292a2e;
   font-family: Proxima Nova;
   font-size: 0.93vw;
   font-weight: 600;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__top_right_txt {
+    font-size: 3.73vw;
+  }
 }
 
 .priceOnSystemContent_top {
@@ -460,12 +621,25 @@ body {
   border-bottom: 0.05vw solid #60626c26;
   margin-bottom: 1.25vw;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent_top {
+    display: flex;
+    flex-direction: column;
+    padding: 13vw 0 13vw 0;
+  }
+}
 
 .priceOnSystemContent__drenSyst_container {
   display: flex;
   flex-direction: column;
   gap: 0.42vw;
   margin-bottom: 1.66vw;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__drenSyst_container {
+    gap: 2.1vw;
+    margin-bottom: 6.4vw;
+  }
 }
 
 .priceOnSystemContent__drenSyst_txt1 {
@@ -479,6 +653,11 @@ body {
   font-weight: 600;
   color: #292a2e;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__drenSyst_txt1_txt {
+    font-size: 4.26vw;
+  }
+}
 
 .priceOnSystemContent__drenSyst_txt1_01 {
   font-family: Inter;
@@ -486,12 +665,22 @@ body {
   font-weight: 600;
   color: #292a2e99;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__drenSyst_txt1_01 {
+    font-size: 2.6vw;
+  }
+}
 
 .priceOnSystemContent__drenSyst_txt2 {
   color: #292a2e99;
   font-family: Inter;
   font-size: 0.83vw;
   font-weight: 400;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__drenSyst_txt2 {
+    font-size: 3.2vw;
+  }
 }
 
 .priceOnSystemContent_propertiesPprice {
@@ -505,9 +694,20 @@ body {
   padding: 1.66vw 1.25vw;
   background: #fafafa;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent_propertiesPprice {
+    padding: 6.4vw 2.1vw;
+    font-size: 2vw;
+  }
+}
 
 .priceOnSystemContent__propertiesPprice_r {
   margin-right: 15vw;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent__propertiesPprice_r {
+    margin: 0;
+  }
 }
 
 .priceOnSystemContent_tableUpStatic {
@@ -519,6 +719,12 @@ body {
   color: #292a2e99;
   padding: 1.66vw 1.25vw;
   text-align: left;
+}
+@media (max-width: 769px) {
+  .priceOnSystemContent_tableUpStatic {
+    font-size: 1.5vw;
+    padding: 6.4vw 2.1vw;
+  }
 }
 
 .priceOnSystemContent__tableUpStatic_el_1 {
@@ -539,6 +745,12 @@ body {
   padding: 1.66vw 1.25vw;
   text-align: left;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent_tableCont {
+    font-size: 2vw;
+    padding: 6.4vw 2.1vw;
+  }
+}
 
 .priceOnSystemContent__tableUpStatic_el_1_cont {
   font-family: Proxima Nova;
@@ -548,7 +760,75 @@ body {
   text-align: left;
   color: #292a2e;
 }
+@media (max-width: 769px) {
+  .priceOnSystemContent__tableUpStatic_el_1_cont {
+    font-size: 2vw;
+  }
+}
 
 .orange {
   color: #f35816;
+}
+
+@media (max-width: 769px) {
+  .header__left_city_container {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+@media (max-width: 769px) {
+  .header__right_phone {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+@media (max-width: 769px) {
+  .header__right_line {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+@media (max-width: 769px) {
+  .catalogPnav {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+@media (min-width: 770px) {
+  .tableScrollingPart {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+@media (max-width: 769px) {
+  .tableScrollingPartBigScreen {
+    position: absolute;
+    visibility: hidden;
+    z-index: -1;
+  }
+}
+
+.tableScrollingPart {
+  min-width: 1000px;
+}
+
+@media (max-width: 420px) {
+  .tableScrollingPart {
+    min-width: 600px;
+  }
+}
+
+.tableScrollingWrapper {
+  overflow-x: auto;
+  white-space: nowrap;
 }
